Make sure the pods wizard first child is not hidden by default.

--- a/ui/css/sass/pods-wizard.scss
+++ b/ui/css/sass/pods-wizard.scss
@@ -244,7 +244,7 @@
 			border-right: 1px solid #dfdfdf;
 			padding-bottom: 25px;
 
-			&:first-child{display:none;}
+			&:first-child{display:block;}
 
 			.button-primary,
 			.button-secondary{
